@@ -1,4 +1,5 @@
 = 1.2.0 =
+[Added] GitHub Repo Sync for TukuToi Plugins
 [Added] Total Page Number on pagination
 [Changed] Moved the "report this plugin" to the left in the cards
 
